--- a/heads_tails/styles.css
+++ b/heads_tails/styles.css
@@ -43,7 +43,38 @@ h1 {
     padding: 0.65em;
 }
 
+#reset {
+    padding: 1em;
+    margin: 1em 17em 1em 17em;
+    font-size: larger;
+}
+
+#title {
+    background-color: darkslategray;
+    color: rgb(230, 212, 212);
+    margin-bottom: 2em;
+}
+
 img {
+    display: flex;
+    flex: auto;
+}
+
+p {
+    font-size: xx-large;
+    border: black solid 1px;
+    margin: 1em 2em;
+    padding: 1em;
+    border-radius: 1em;
+}
+
+@media screen and (max-width: 600px) {
+    #reset {
+        margin: 2em;
+    }
+}
+
+#load-view {
     display: flex;
     flex: auto;
 }
